# study

./: .gitignore  Makefile  kaggle.yml  pyproject.toml
remote_notebooks/abcdeath__mnist-digit-recognition/: mnist-digit-recognition.ipynb
y_das_agents_week_26/a/: solution.py
y_das_agents_week_26/agents_contest/a/: submission.ipynb
y_das_agents_week_26/b/: solution.ipynb
y_das_agents_week_26/c/: solution.py
y_training_2.0/assignment01_knn/: k_nearest_neighbor.py  knn_assignment_0_01.ipynb  naive_bayes_cls.py
y_training_2.0/assignment02_laplace/: distribution.py  laplace_distribution_assignment_0_02.ipynb
y_training_2.0/assignment03_derivatives/: derivatives_assignment_03.ipynb
y_training_2.0/assignment04_power_iteration/: power_method_assignment0_04.ipynb
y_training_2.0/assignment05_bagging_and_oob/: assignment_bagging_and_oob.ipynb
y_training_2.0/assignment06_boosting/: assignment_boosting.ipynb
y_training_2.0/assignment07_mnist_classification/: assignment_mnist.ipynb
y_training_2.0/assignment08_importances/: assignment_importances.ipynb
